--- a/style.css
+++ b/style.css
@@ -36,3 +36,23 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.faves1, .faves2{
+    display: flex;
+    flex-direction: row;
+
+    justify-content:space-between;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+
+.section{
+    display:flex;
+    flex-direction: column;
+    width: 220px;
+}
+
+.introduction{
+    margin-bottom: 20px;
+}
