style: add font

--- a/style.css
+++ b/style.css
@@ -56,3 +56,11 @@ body {
 .introduction{
     margin-bottom: 20px;
 }
+
+.fave__body {
+    font-family:'Source Sans Pro'; 
+    font-size: 14px;
+    margin:0px;
+    line-height: 25px;
+    
+}
